# scrapyd-client

./: .bumpversion.cfg  .gitignore  .travis.yml  pyproject.toml  setup.py  tox.ini
scrapyd_client/: VERSION  cli.py  commands.py  deploy.py  lib.py  utils.py
tests/: test_errors.py  test_projects.py  test_schedule.py  test_scrapyd-deploy.py
