[tool.poetry]
name = "scrapyd_client"
version = "1.3.0"
description = "dimdim scrapyd-client"
authors = ["s.berebko <serbernar1@gmail.com>"]
license = "BSD License"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"
scrapy = "^1.6"
bumpversion = "^0.5.3"


[tool.poetry.dev-dependencies]
pytest-console-scripts = "^0.1.8"
pytest-mock = "^1.10"
tox = "^3.7"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
